Fixed icon row spacing

--- a/TEMPLATE/d3_project_template/css/style.css
+++ b/TEMPLATE/d3_project_template/css/style.css
@@ -79,6 +79,10 @@ a:hover {
 	width: 100%;
 }
 
+#row1 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 
 #test-map {
 	width: 100%;
@@ -121,6 +125,9 @@ a:hover {
 .restaurant-data p {
     text-align: left;
 }
+
+
+
 /*/
 
 .stations, .stations svg {
@@ -171,13 +178,13 @@ p {
     padding: 50px 0 50px;
     background-color: #2e3133;
     /*width: 100vw;*/
-    margin-left: -50px !important;
-    margin-right: -50px;
-    margin-bottom: 10px;
-    color: white;
+    /*margin-left: -50px !important;*/
+    /*margin-right: -50px;*/
+    /*margin-bottom: 10px;*/
+    /*color: white;*/
     /*margin-bottom: 10px;*/
     /*padding: 0 0 0 0;*/
-}
+
 
 #treemap-details {
 	padding-top: 15px;
